# chess

./: .env.example  .gitignore  AGENTS.md  Makefile  environment.yml  pyproject.toml
lichess_analysis/: __init__.py
lichess_sdk/: __init__.py  client.py  create_request.py  download_games.py  types.py  utils.py
tests/: conftest.py  test_imports_smoke.py
tools/openapi/: README.md  generate.py
tools/openapi/config/: client_config.yaml
tools/openapi/site/public/: openapi.yaml
