[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lichess-sdk"
version = "0.2.0"
description = "Unified Lichess SDK (client + helpers + types)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["lichess_sdk", "lichess_sdk.*"]

[tool.setuptools]
exclude-package-data = {"*" = ["third_party/*", "tools/*"]}
